# strongpods

./: .gitignore  .gitpod.yml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: add_tag.yml  black.yml  check_dependencies.yml  check_versioning.yml  python.yml  release.yml  release_test.yml  test.yml  unit_test.yml
ci/: add_dev_number.py
python_boilerplate/: __init__.py  main.py
scripts/: setup_workspace.sh  update_deps.sh
strongpods/: __init__.py  core.py  helpers.py  pods.py
tests/: test_computation.py  test_core.py  test_integration.py  test_pods.py  test_pods_decorator.py  tests_old.py
