# Copyright (c) 2024, Tudor Oancea
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strongpods"
version = "2.0.1"
authors = [{ name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }]
dependencies = ["numpy"]
description = "A tiny and simple library for Strongly typed Plain Old Data Structures."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = { file = "LICENSE.md" }

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["strongpods"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["strongpods"]
typeCheckingMode = "standard"
# reportUnusedImport = "none"
# reportUnusedVariable = "none"
# reportUnusedFunction = "none"
